Various ErrorProne / NullAway changes (#10303)